--- a/src/p2-homeworks/h5-rrd-v6/comonents/Sidebar/Sidebar.module.css
+++ b/src/p2-homeworks/h5-rrd-v6/comonents/Sidebar/Sidebar.module.css
@@ -32,6 +32,8 @@
 .sidebar > a > span {
     display: inline-block;
     margin-left: 12px;
+    margin-bottom: 4px;
+
 }
 
 .sidebarClosed {
@@ -72,7 +74,7 @@
 
 
 .editableSidebar > img:active {
-    box-shadow: 0px 5px 20px 9px rgba(34, 60, 80, 0.15);
+    box-shadow: 0 5px 20px 9px rgba(34, 60, 80, 0.15);
 }
 
 
